[package]
name = "bardock"
version = "0.1.0"
authors = ["kaziz <kaziz@bink.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bardock"
path = "src/bardock/lib.rs"

[dependencies]
structopt = "0.3.15"
anyhow = "1.0.31"
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0"
toml = { version = "0.5.6", features = ["preserve_order"]}
serde = { version = "1.0.114", features = ["derive"]}

[[bin]]
name = "bardock"
